crates/wx-compiler/src/codegen/snapshots/wx_compiler__codegen__tests__slice_range_array_wat.snap
---
source: crates/wx-compiler/src/codegen/tests.rs
expression: "wasmprinter::print_bytes(&case.bytecode).unwrap()"
---
(module
  (type (;0;) (func (param i32) (result i32 i32)))
  (type (;1;) (func (param i32 i32 i32) (result i32 i32)))
  (memory (;0;) 1)
  (export "full_array" (func 0))
  (export "partial_array" (func 1))
  (func (;0;) (type 0) (param i32) (result i32 i32)
    (local i32 i32)
    local.get 0
    local.set 1
    i32.const 4
    local.set 2
    local.get 1
    local.get 2
  )
  (func (;1;) (type 1) (param i32 i32 i32) (result i32 i32)
    (local i32 i32)
    local.get 1
    local.get 2
    i32.gt_u
    if ;; label = @1
      unreachable
    end
    local.get 0
    local.get 1
    i32.const 2
    i32.shl
    i32.add
    local.set 3
    local.get 2
    local.get 1
    i32.sub
    local.set 4
    local.get 3
    local.get 4
  )
)
